--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "modules/bg-gallery"]
 	path = modules/bg-gallery
-	url = git@github.com:adamlukaszczyk/background-image-gallery.git
+	url = https://github.com/adamlukaszczyk/background-image-gallery.git
